fix: arrgle base urls de swagger y añadi colección de postman
